# Pelican

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  TODO-Content.md  TODO-jsctheme.md  netlify.toml  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  seo_report.html  tasks.py
.github/.workflows/: pelican.yaml
.github/workflows/: pelican.yaml  static.yml
changelog.d/: 20230618_121802_justin_Implement_text_content.md  20230619_205459_justin_Implement_text_content.md  20230619_205650_justin_Implement_text_content.md  20230716_202148_justin_Implement_text_content.md  20241004_113015_justin_post_netbox_plugin.md  20241004_113327_justin_post_cisco_dhcp.md  20260104_200825_justin.md
content/blog/: 20191102.md  20191119.md  20191119_gatsby_begining.md  20210304.md  20230211_advent_of_code.md  20230522_test.md  20230529_dattrmm_api.md
content/extra/: robots.txt
content/pages/: 404.md  about.md  home.md
future-imperfect/templates/: article.html  base.html  index.html
jsctheme/templates/: article.html  base.html  index.html  latest_posts.html
l/feeds/: all.atom.xml
output/: 404.html  archives.html  authors.html  categories.html  index.html  index2.html  index3.html  my-first-review.html  robots.txt  search.toml  sitemap.xml  tags.html  testing-out-pelican.html
output/2010/: my-first-review.html
output/2019/: gatsby-beginings.html  hacktoberfest-2019.html
output/2020/: hacktoberfest-2020-begins.html
output/2021/: 2021-03-04-windows-server-dhcp-conversion-to-cisco-cli.html
output/2023/: 2022-advent-of-code.html  (+2 more)
src/: pelicanconf.py
(+94 files in other folders)
