[project]
name = "web-site"
version = "0.1.0"
description = "justincooksey.com Web Site using Pelican"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "anyio>=4.9.0",
    "attrs>=25.3.0",
    "beautifulsoup4>=4.13.4",
    "blinker>=1.7.0",
    "certifi>=2025.4.26",
    "charset-normalizer>=3.4.2",
    "click>=8.2.0",
    "click-log>=0.4.0",
    "colorama>=0.4.6",
    "docutils>=0.21.2",
    "feedgenerator>=2.1.0",
    "idna>=3.10",
    "jinja2>=3.1.6",
    "markdown>=3.8",
    "markdown-it-py>=3.0.0",
    "markupsafe>=3.0.2",
    "mdurl>=0.1.2",
    "ordered-set>=4.1.0",
    "pelican>=4.11.0.post0",
    "pelican-image-process>=3.3.0",
    "pelican-redirect>=2.1.0",
    "pelican-share-post>=1.2.1",
    "pelican-sitemap>=1.2.0",
    "pygments>=2.18.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "soupsieve>=2.7",
    "typing-extensions>=4.13.2",
    "tzdata>=2025.2",
    "unidecode>=1.4.0",
    "urllib3>=2.4.0",
    "watchfiles>=1.0.5",
]

[dependency-groups]
dev = [
    "scriv>=1.7.0",
]
